# nanohost

./: .env.example  .gitignore  Caddyfile  Cargo.toml  readme.md
data/: db.sqlite3
migrations/2024-07-07-063048_create_todos/: up.sql
migrations/2024-07-07-200126_create_sites/: down.sql  up.sql
migrations/2024-07-08-065738_update_sites/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs
src/handlers/: sites.rs
src/services/: cloudfront_key_value.rs  dynamodb.rs  mod.rs  s3.rs
src/utils/: mod.rs  upload_file.rs  zip.rs
