[package]
name = "nanohost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.8.0"
aws-config = "1.5.4"
aws-sdk-cloudfrontkeyvaluestore = "1.35.0"
aws-sdk-s3 = "1.40.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
mime_guess = "2.0.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full", "macros"] }
tokio-util = "0.7.11"
ulid = "1.1.2"
zip = "2.1.3"
